--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "parcel": "^2.0.0-beta.2",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "rxjs": "^7.4.0"
   }
 }
